force-app/main/default/objects/Activity/fields/CallDisconnectedTime__c.field-meta.xml
<CustomField>
        <fullName>CallDisconnectedTime__c</fullName>
        <label>CallDisconnectedTime</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>