force-app/main/default/objects/Activity/fields/CallInitiatedTime__c.field-meta.xml
<CustomField>
        <fullName>CallInitiatedTime__c</fullName>
        <label>CallInitiatedTime</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>