force-app/main/default/objects/Activity/fields/ringTimeInSeconds__c.field-meta.xml
<CustomField>
        <fullName>ringTimeInSeconds__c</fullName>
        <label>ringTimeInSeconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>