force-app/main/default/objects/Activity/fields/ScreenPopResult__c.field-meta.xml
<CustomField>
        <fullName>ScreenPopResult__c</fullName>
        <label>ScreenPopResult</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>