force-app/main/default/objects/Activity/fields/talkTimeInSeconds__c.field-meta.xml
<CustomField>
        <fullName>talkTimeInSeconds__c</fullName>
        <label>talkTimeInSeconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>